@@ -1,0 +1,13 @@
+#Introducing a bit of code
+
+~~~
+document.writeln('Hello world');
+~~~
+
+This would be a variable definition `var foo=bar`
+
+And this would be somewhat more code
+
+```
+my $zipi = zape;
+```
