@@ -1,3 +1,8 @@
+2016-04-20  Juan J. merelo  <jmerelo@penny>
+
+	* lib/Test/Text.pm: Strips code from markdown to avoid getting
+	bogged down by it. 
+
 2015-12-20  Juan J. merelo  <jmerelo@penny>
 
 	* lib/Test/Text.pm (check): Strips URL to avoid oh so many
